additional unit tests